Fix height cropping issue

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -9,7 +9,7 @@ html, body {
   padding: 0;
   width: 100%;
   min-width: $screen-min;
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
